Remove the OnLoad method

--- a/apps/homescreen/homescreen.html
+++ b/apps/homescreen/homescreen.html
@@ -16,7 +16,7 @@
     <script type="text/javascript" src="js/l20n/l20n.js"></script>
     <script type="text/javascript" src="js/l20n/l20n-xml.js"></script>
   </head>
-  <body onload="OnLoad();">
+  <body>
     <div id="screen">
       <div id="keyboard" data-hidden="true" onmousedown="return false;"></div>
       <div id="statusbar">
